# s3bench

./: .gitignore  .mise.toml  README.md  bench.sh  config.sh.example  github-issue.md
ec2/: bench-matrix.sh  bench-remote.sh  cleanup.sh  connect.sh  launch.sh  setup-role.sh  user-data.sh  wait-for-bootstrap.sh
go/: go.mod  go.sum  main.go
python/: download.py  pyproject.toml
results/: aggregate-results.py  benchmark_20260105_164559.json  c5n.9xlarge_20260106_192301.json  c5n.9xlarge_20260106_201850.json  c5n.xlarge_20260106_204712.json  m5.large_20260107_105637.json  t3.medium_20260107_114832.json  t3.xlarge_20260107_112321.json
rust/: Cargo.toml
rust/src/: main.rs
s5cmd/: bench.sh
