[package]
name = "s3bench-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "=1.8.12", features = ["behavior-version-latest"] }
aws-sdk-s3 = "=1.119.0"
aws-sdk-s3-transfer-manager = "=0.1.3"
aws-smithy-async = "=1.2.7"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
